--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,29 +3,6 @@
 @tailwind utilities;
 
 @layer base {
-  @media screen and (min-width: 1024px) {
-    html {
-      scroll-behavior: smooth;
-    }
-
-    ::selection {
-      color: #ffffff;
-      background-color: #0279d9;
-    }
-
-    ::-webkit-scrollbar {
-      width: 0.5rem;
-    }
-
-    ::-webkit-scrollbar-track {
-      background-color: #cae3f7;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background-color: #7fbbec;
-    }
-  }
-
   @font-face {
     font-family: "vazirmatn-regular";
     src: url("/fonts/vazirmatn/vazirmatn-regular.ttf") format("truetype");
@@ -56,5 +33,30 @@
     font-weight: 900;
     font-style: normal;
     font-display: swap;
+  }
+
+  ::selection {
+    color: #ffffff;
+    background-color: #0279d9;
+  }
+
+  html {
+    color: #18181b;
+    font-family: "vazirmatn-regular";
+    scroll-behavior: smooth;
+  }
+
+  @media screen and (min-width: 1024px) {
+    ::-webkit-scrollbar {
+      width: 0.5rem;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: #cae3f7;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: #7fbbec;
+    }
   }
 }
